2009-10-03  Kai Tietz  <kai.tietz@onevision.com>

        * libsrc/wia-uuid.c: New.
        * Makefile.am: Add libsrc/wia-uuid.c to libuuid.a lib.
        * Makefile.in: Regenerated.

	* misc/basename.c, misc/dirname.c: New.
	* Makefile.am: Add basename.c and dirname.c to libmingwex.a lib.
	* Makefile.in: Regenerated.

2009-09-20  Ozkan Sezer  <sezeroz@gmail.com>

	* intrins/ilock*.c:  Added non-underscored functions as aliases to the
	real ones.

2009-09-18  Kai Tietz  <kai.tietz@onevision.com>

	* Implement time_t related functions by stubs in libmingwex.a and do
	export them in .def as DATA. So just the imp_<name> is present and we
	avoid collisions in names. Reasoned is this patch by dlltool's inability
	to alias symbols.

2009-09-17  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/lib64: Add for time specific function the _<name>32 version to def
	files.
	* misc: Adjust time functions to use _<name>32 on demand.

2009-09-15  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/lib64: Add symbols _localtime32, _gmtime32, and _mkgmtime32.
	* misc/...: Add version for 32-bit time_t case.

2009-09-10  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/ and lib64/: Comment in msvcrXX.def and in msvcrt.def the
	symbols pow and powf.

2009-09-09  Mook  <mook.gcc@gmail.com>

	Patch/2820174 r=NightStrike
	* configure.ac: Automatically detect whether to build the 32 or 64
	bit library based on what the compiler accepts.
	* Makefile.am: Explicitly use -m64 for 64 bit library.
	* configure, Makefile.in: Regenerated.

2009-09-08  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/readcr8.c, intrincs/writecr8.c: readcr8() and writecr8()
	not prototyped in intrin.h for x86. Manually added prototypes to the
	relevant *.c files.

2009-09-08  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/*.c:  Update all declarations to match intrin.h. Include
	only intrin.h, not windows.h.  Removed aliases for non-underscored
	InterlockedExchange and InterlockedCompareExchange.  Added non-